aguacero/devtron-ingress-aguacerowx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aguacero-aguacero-ingress
  namespace: aguacero
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - aguacerowx.com
      secretName: secret-tls-aguacerowx
  rules:
    - host: aguacerowx.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: aguacero-aguacero-service
                port:
                  number: 4173
