aguacero/fanout-ingress-aguacerowx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress-aguacerowx
  namespace: aguacero
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  rules:
  - host: aguacerowx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aguacero-prod-aguacero-prod-service
            port:
              number: 4173

  tls:
    - hosts:
      - aguacerowx.com
      secretName: secret-tls-aguacerowx
---
